use strip instead of trim